# maestro_core

./: .gitignore  .gitmodules  .ignore  Cargo.toml  README.md  open_td.sh
assets/json/: example_2.json  example_hands.json  hand_schema.json
assets/touchdesigner/: MediaPipe TouchDesigner.61.toe
assets/touchdesigner/Backup/: MediaPipe TouchDesigner.1.toe  MediaPipe TouchDesigner.10.toe  MediaPipe TouchDesigner.11.toe  MediaPipe TouchDesigner.12.toe  MediaPipe TouchDesigner.13.toe  MediaPipe TouchDesigner.14.toe  MediaPipe TouchDesigner.15.toe  MediaPipe TouchDesigner.16.toe  MediaPipe TouchDesigner.17.toe  MediaPipe TouchDesigner.18.toe  MediaPipe TouchDesigner.19.toe  MediaPipe TouchDesigner.2.toe  MediaPipe TouchDesigner.20.toe  MediaPipe TouchDesigner.21.toe  MediaPipe TouchDesigner.22.toe  MediaPipe TouchDesigner.23.toe  MediaPipe TouchDesigner.24.toe  MediaPipe TouchDesigner.25.toe  MediaPipe TouchDesigner.26.toe  MediaPipe TouchDesigner.27.toe  MediaPipe TouchDesigner.28.toe  MediaPipe TouchDesigner.29.toe  MediaPipe TouchDesigner.3.toe  MediaPipe TouchDesigner.30.toe  MediaPipe TouchDesigner.31.toe  MediaPipe TouchDesigner.32.toe  MediaPipe TouchDesigner.33.toe  MediaPipe TouchDesigner.34.toe  MediaPipe TouchDesigner.35.toe  MediaPipe TouchDesigner.36.toe  MediaPipe TouchDesigner.37.toe  MediaPipe TouchDesigner.38.toe  MediaPipe TouchDesigner.39.toe  MediaPipe TouchDesigner.4.toe  MediaPipe TouchDesigner.40.toe  MediaPipe TouchDesigner.41.toe  MediaPipe TouchDesigner.42.toe  (+23 more)
src/: lib.rs  main.rs  prelude.rs  settings.rs
src/app/: mod.rs
src/dsp/: mod.rs
src/util/: atomic_ops.rs  general.rs  interp.rs  mod.rs  thread_pool.rs  timer.rs  window.rs  xfer.rs
(+117 files in other folders)
